fix: 修改主题问题，优化显示效果

--- a/src/assets/style/them/gray.less
+++ b/src/assets/style/them/gray.less
@@ -10,7 +10,8 @@
 	.tags-container,
 	.tags-container .tags,
 	.layout-banner-header,
-	.layout-navbar .navbar {
+	.layout-navbar .navbar,
+	.parent-memu {
 		background: #2c3643;
 	}
 
@@ -57,19 +58,19 @@
 
 	.operation-area .arco-btn-secondary {
 		background-color: rgba(0, 0, 0, 0.2);
-		color: #fff;
+		color: #c5c5c5;
 	}
 
 	.operation-area .arco-btn-secondary:hover,
 	.operation-area .arco-btn-secondary[type='button']:hover {
 		background-color: rgba(0, 0, 0, 0.5);
-		color: #fff;
+		color: #c5c5c5;
 	}
 
 	.arco-menu-light .arco-menu-item {
 		background-color: rgba(0, 0, 0, 0);
-		color: #fff;
-		fill: #fff;
+		color: #c5c5c5;
+		fill: #c5c5c5;
 	}
 
 	.arco-menu-light .arco-menu-item:hover,
@@ -80,7 +81,7 @@
 
 	.ma-menu .icon,
 	.arco-menu-selected .icon {
-		fill: #fff;
+		fill: #c5c5c5;
 	}
 
 	.right-side .nav-btn[data-v-8d8000f3] {
@@ -109,7 +110,7 @@
 	.arco-menu-light .arco-menu-item .arco-menu-icon,
 	.arco-menu-light .arco-menu-inline-header .arco-icon,
 	.arco-menu-light .arco-menu-inline-header {
-		color: #fff;
+		color: #c5c5c5;
 	}
 
 	.layout-banner-header .banner-menus li.active {
@@ -121,7 +122,7 @@
 			height: 51px;
 			padding-left: 10px;
 			font-weight: bold;
-			color: #fff;
+			color: #c5c5c5;
 			background-color: #2c3643;
 			border-bottom: none;
 		}
@@ -148,6 +149,10 @@
 	.tags a.active {
 		background-color: #555;
 	}
+
+	.layout-navbar > .navbar > .right-side > li button {
+		border-color: #c5c5c554;
+	}
 }
 
 .sys-menus .arco-trigger-popup .icon {
@@ -156,6 +161,6 @@
 
 [mine-skin='businessGray'][arco-theme='dark'] {
 	.arco-trigger-menu .arco-trigger-menu-has-icon .arco-trigger-menu-icon {
-		fill: #fff;
+		fill: #c5c5c5;
 	}
 }
